package grpc

import (
	"context"

	"github.com/aegisshield/data-integration/internal/config"
	"go.uber.org/zap"
	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
	"google.golang.org/protobuf/types/known/emptypb"
	"google.golang.org/protobuf/types/known/timestamppb"
)

// Server implements the gRPC server for data integration service
type Server struct {
	pipeline        interface{} // ETL pipeline interface
	validator       interface{} // Validator interface
	qualityChecker  interface{} // Quality checker interface
	lineageTracker  interface{} // Lineage tracker interface
	storageManager  interface{} // Storage manager interface
	config          config.Config
	logger          *zap.Logger
	UnimplementedDataIntegrationServiceServer
}

// NewServer creates a new gRPC server
func NewServer(
	pipeline interface{},
	validator interface{},
	qualityChecker interface{},
	lineageTracker interface{},
	storageManager interface{},
	config config.Config,
	logger *zap.Logger,
) *Server {
	return &Server{
		pipeline:        pipeline,
		validator:       validator,
		qualityChecker:  qualityChecker,
		lineageTracker:  lineageTracker,
		storageManager:  storageManager,
		config:          config,
		logger:          logger,
	}
}

// Health check methods

// HealthCheck returns the health status of the service
func (s *Server) HealthCheck(ctx context.Context, req *emptypb.Empty) (*HealthResponse, error) {
	s.logger.Debug("Health check requested")

	response := &HealthResponse{
		Status:    "healthy",
		Timestamp: timestamppb.Now(),
		Service:   "data-integration",
		Version:   "1.0.0",
	}

	return response, nil
}

// ReadinessCheck returns the readiness status of the service
func (s *Server) ReadinessCheck(ctx context.Context, req *emptypb.Empty) (*ReadinessResponse, error) {
	s.logger.Debug("Readiness check requested")

	// Check if all components are ready
	checks := map[string]bool{
		"database": true, // Check database connection
		"kafka":    true, // Check Kafka connection
		"storage":  true, // Check storage availability
	}

	ready := true
	for service, status := range checks {
		if !status {
			ready = false
			s.logger.Warn("Service not ready", zap.String("service", service))
		}
	}

	response := &ReadinessResponse{
		Ready:     ready,
		Timestamp: timestamppb.Now(),
		Checks:    checks,
	}

	return response, nil
}

// ETL Pipeline methods

// CreateETLJob creates a new ETL job
func (s *Server) CreateETLJob(ctx context.Context, req *CreateETLJobRequest) (*ETLJobResponse, error) {
	s.logger.Info("Creating ETL job", zap.String("name", req.Name))

	if req.Name == "" {
		return nil, status.Error(codes.InvalidArgument, "job name is required")
	}

	// Validate job configuration
	if req.Source == nil {
		return nil, status.Error(codes.InvalidArgument, "source configuration is required")
	}

	if req.Target == nil {
		return nil, status.Error(codes.InvalidArgument, "target configuration is required")
	}

	// Create job ID
	jobID := generateJobID()

	// In real implementation, would create job in pipeline
	// job, err := s.pipeline.CreateJob(ctx, req)
	// if err != nil {
	//     return nil, status.Errorf(codes.Internal, "failed to create job: %v", err)
	// }

	response := &ETLJobResponse{
		JobId:     jobID,
		Name:      req.Name,
		Type:      req.Type,
		Status:    "created",
		CreatedAt: timestamppb.Now(),
	}

	s.logger.Info("ETL job created", zap.String("job_id", jobID))
	return response, nil
}

// GetETLJob retrieves an ETL job by ID
func (s *Server) GetETLJob(ctx context.Context, req *GetETLJobRequest) (*ETLJobResponse, error) {
	s.logger.Debug("Getting ETL job", zap.String("job_id", req.JobId))

	if req.JobId == "" {
		return nil, status.Error(codes.InvalidArgument, "job ID is required")
	}

	// In real implementation, would retrieve job from pipeline
	// job, err := s.pipeline.GetJob(ctx, req.JobId)
	// if err != nil {
	//     if errors.Is(err, ErrJobNotFound) {
	//         return nil, status.Error(codes.NotFound, "job not found")
	//     }
	//     return nil, status.Errorf(codes.Internal, "failed to get job: %v", err)
	// }

	// Mock response
	response := &ETLJobResponse{
		JobId:     req.JobId,
		Name:      "Customer Data ETL",
		Type:      "batch",
		Status:    "running",
		CreatedAt: timestamppb.Now(),
		UpdatedAt: timestamppb.Now(),
	}

	return response, nil
}

// ListETLJobs lists ETL jobs with pagination
func (s *Server) ListETLJobs(ctx context.Context, req *ListETLJobsRequest) (*ListETLJobsResponse, error) {
	s.logger.Debug("Listing ETL jobs", zap.Int32("limit", req.Limit))

	// In real implementation, would list jobs from pipeline
	// jobs, total, err := s.pipeline.ListJobs(ctx, req)
	// if err != nil {
	//     return nil, status.Errorf(codes.Internal, "failed to list jobs: %v", err)
	// }

	// Mock response
	jobs := []*ETLJobResponse{
		{
			JobId:     "job_1",
			Name:      "Customer Data ETL",
			Type:      "batch",
			Status:    "running",
			CreatedAt: timestamppb.Now(),
			UpdatedAt: timestamppb.Now(),
		},
		{
			JobId:     "job_2",
			Name:      "Transaction Stream",
			Type:      "stream",
			Status:    "completed",
			CreatedAt: timestamppb.Now(),
			UpdatedAt: timestamppb.Now(),
		},
	}

	response := &ListETLJobsResponse{
		Jobs:   jobs,
		Total:  int32(len(jobs)),
		Limit:  req.Limit,
		Offset: req.Offset,
	}

	return response, nil
}

// StartETLJob starts an ETL job
func (s *Server) StartETLJob(ctx context.Context, req *StartETLJobRequest) (*ETLJobResponse, error) {
	s.logger.Info("Starting ETL job", zap.String("job_id", req.JobId))

	if req.JobId == "" {
		return nil, status.Error(codes.InvalidArgument, "job ID is required")
	}

	// In real implementation, would start job in pipeline
	// err := s.pipeline.StartJob(ctx, req.JobId)
	// if err != nil {
	//     return nil, status.Errorf(codes.Internal, "failed to start job: %v", err)
	// }

	response := &ETLJobResponse{
		JobId:     req.JobId,
		Status:    "running",
		UpdatedAt: timestamppb.Now(),
	}

	s.logger.Info("ETL job started", zap.String("job_id", req.JobId))
	return response, nil
}

// StopETLJob stops an ETL job
func (s *Server) StopETLJob(ctx context.Context, req *StopETLJobRequest) (*ETLJobResponse, error) {
	s.logger.Info("Stopping ETL job", zap.String("job_id", req.JobId))

	if req.JobId == "" {
		return nil, status.Error(codes.InvalidArgument, "job ID is required")
	}

	// In real implementation, would stop job in pipeline
	// err := s.pipeline.StopJob(ctx, req.JobId)
	// if err != nil {
	//     return nil, status.Errorf(codes.Internal, "failed to stop job: %v", err)
	// }

	response := &ETLJobResponse{
		JobId:     req.JobId,
		Status:    "stopped",
		UpdatedAt: timestamppb.Now(),
	}

	s.logger.Info("ETL job stopped", zap.String("job_id", req.JobId))
	return response, nil
}

// GetETLJobStatus returns the status of an ETL job
func (s *Server) GetETLJobStatus(ctx context.Context, req *GetETLJobStatusRequest) (*ETLJobStatusResponse, error) {
	s.logger.Debug("Getting ETL job status", zap.String("job_id", req.JobId))

	if req.JobId == "" {
		return nil, status.Error(codes.InvalidArgument, "job ID is required")
	}

	// In real implementation, would get status from pipeline
	// status, err := s.pipeline.GetJobStatus(ctx, req.JobId)
	// if err != nil {
	//     return nil, status.Errorf(codes.Internal, "failed to get job status: %v", err)
	// }

	response := &ETLJobStatusResponse{
		JobId:            req.JobId,
		Status:           "running",
		Progress:         0.65,
		RecordsProcessed: 15420,
		RecordsTotal:     23692,
		StartedAt:        timestamppb.Now(),
	}

	return response, nil
}

// Data Validation methods

// ValidateData validates data using configured rules
func (s *Server) ValidateData(ctx context.Context, req *ValidateDataRequest) (*ValidationResponse, error) {
	s.logger.Info("Validating data")

	if req.Data == nil {
		return nil, status.Error(codes.InvalidArgument, "data is required")
	}

	// In real implementation, would validate using validator
	// result, err := s.validator.ValidateData(ctx, req.Data, req.Rules)
	// if err != nil {
	//     return nil, status.Errorf(codes.Internal, "validation failed: %v", err)
	// }

	response := &ValidationResponse{
		Valid:        true,
		Score:        0.95,
		ValidatedAt:  timestamppb.Now(),
		TotalRecords: 1000,
		ValidRecords: 950,
		ErrorRecords: 25,
	}

	return response, nil
}

// CreateValidationRule creates a new validation rule
func (s *Server) CreateValidationRule(ctx context.Context, req *CreateValidationRuleRequest) (*ValidationRuleResponse, error) {
	s.logger.Info("Creating validation rule", zap.String("name", req.Name))

	if req.Name == "" {
		return nil, status.Error(codes.InvalidArgument, "rule name is required")
	}

	if req.Type == "" {
		return nil, status.Error(codes.InvalidArgument, "rule type is required")
	}

	// Create rule ID
	ruleID := generateRuleID()

	// In real implementation, would create rule in validator
	// rule, err := s.validator.CreateRule(ctx, req)
	// if err != nil {
	//     return nil, status.Errorf(codes.Internal, "failed to create rule: %v", err)
	// }

	response := &ValidationRuleResponse{
		RuleId:    ruleID,
		Name:      req.Name,
		Type:      req.Type,
		CreatedAt: timestamppb.Now(),
	}

	s.logger.Info("Validation rule created", zap.String("rule_id", ruleID))
	return response, nil
}

// Data Quality methods

// CheckDataQuality performs data quality assessment
func (s *Server) CheckDataQuality(ctx context.Context, req *CheckDataQualityRequest) (*DataQualityResponse, error) {
	s.logger.Info("Checking data quality")

	if req.Data == nil {
		return nil, status.Error(codes.InvalidArgument, "data is required")
	}

	// In real implementation, would check quality using quality checker
	// result, err := s.qualityChecker.CheckQuality(ctx, req.Data, req.Dimensions)
	// if err != nil {
	//     return nil, status.Errorf(codes.Internal, "quality check failed: %v", err)
	// }

	dimensions := map[string]*QualityDimension{
		"completeness": {
			Score:       0.95,
			Issues:      2,
			Description: "95% of required fields are complete",
		},
		"accuracy": {
			Score:       0.82,
			Issues:      15,
			Description: "82% of values match expected patterns",
		},
		"consistency": {
			Score:       0.91,
			Issues:      8,
			Description: "91% of values are consistent across sources",
		},
	}

	response := &DataQualityResponse{
		OverallScore: 0.87,
		CheckedAt:    timestamppb.Now(),
		Dimensions:   dimensions,
		IssuesSummary: &IssuesSummary{
			Critical: 2,
			Major:    18,
			Minor:    45,
		},
	}

	return response, nil
}

// Data Lineage methods

// TrackLineage tracks data lineage for a dataset
func (s *Server) TrackLineage(ctx context.Context, req *TrackLineageRequest) (*LineageResponse, error) {
	s.logger.Info("Tracking lineage", zap.String("dataset", req.Dataset))

	if req.Dataset == "" {
		return nil, status.Error(codes.InvalidArgument, "dataset is required")
	}

	if req.Operation == "" {
		return nil, status.Error(codes.InvalidArgument, "operation is required")
	}

	// Create lineage ID
	lineageID := generateLineageID()

	// In real implementation, would track lineage using lineage tracker
	// err := s.lineageTracker.TrackLineage(ctx, req)
	// if err != nil {
	//     return nil, status.Errorf(codes.Internal, "failed to track lineage: %v", err)
	// }

	response := &LineageResponse{
		LineageId: lineageID,
		Dataset:   req.Dataset,
		Operation: req.Operation,
		TrackedAt: timestamppb.Now(),
	}

	s.logger.Info("Lineage tracked", zap.String("lineage_id", lineageID))
	return response, nil
}

// GetDatasetLineage retrieves lineage for a dataset
func (s *Server) GetDatasetLineage(ctx context.Context, req *GetDatasetLineageRequest) (*DatasetLineageResponse, error) {
	s.logger.Debug("Getting dataset lineage", zap.String("dataset_id", req.DatasetId))

	if req.DatasetId == "" {
		return nil, status.Error(codes.InvalidArgument, "dataset ID is required")
	}

	// In real implementation, would get lineage from lineage tracker
	// lineage, err := s.lineageTracker.GetDatasetLineage(ctx, req.DatasetId, req.Direction, req.Depth)
	// if err != nil {
	//     return nil, status.Errorf(codes.Internal, "failed to get lineage: %v", err)
	// }

	// Mock lineage graph
	nodes := []*LineageNode{
		{
			Id:   req.DatasetId,
			Type: "dataset",
			Name: "Customer Data",
		},
		{
			Id:   "raw_customer_data",
			Type: "dataset",
			Name: "Raw Customer Data",
		},
	}

	edges := []*LineageEdge{
		{
			From:      "raw_customer_data",
			To:        req.DatasetId,
			Operation: "transform",
		},
	}

	response := &DatasetLineageResponse{
		DatasetId:   req.DatasetId,
		Direction:   req.Direction,
		Depth:       req.Depth,
		Graph:       &LineageGraph{Nodes: nodes, Edges: edges},
		GeneratedAt: timestamppb.Now(),
	}

	return response, nil
}

// Storage methods

// UploadData uploads data to storage
func (s *Server) UploadData(ctx context.Context, req *UploadDataRequest) (*UploadResponse, error) {
	s.logger.Info("Uploading data", zap.String("path", req.Path))

	if req.Path == "" {
		return nil, status.Error(codes.InvalidArgument, "path is required")
	}

	if len(req.Data) == 0 {
		return nil, status.Error(codes.InvalidArgument, "data is required")
	}

	// Create upload ID
	uploadID := generateUploadID()

	// In real implementation, would upload using storage manager
	// result, err := s.storageManager.Upload(ctx, req.Path, req.Data, req.Metadata)
	// if err != nil {
	//     return nil, status.Errorf(codes.Internal, "upload failed: %v", err)
	// }

	response := &UploadResponse{
		UploadId:   uploadID,
		Path:       req.Path,
		Size:       int64(len(req.Data)),
		Status:     "uploaded",
		UploadedAt: timestamppb.Now(),
	}

	s.logger.Info("Data uploaded", zap.String("upload_id", uploadID))
	return response, nil
}

// ListStorageObjects lists objects in storage
func (s *Server) ListStorageObjects(ctx context.Context, req *ListStorageObjectsRequest) (*ListStorageObjectsResponse, error) {
	s.logger.Debug("Listing storage objects", zap.String("prefix", req.Prefix))

	// In real implementation, would list objects using storage manager
	// objects, err := s.storageManager.ListObjects(ctx, req.Prefix, req.Limit, req.Offset)
	// if err != nil {
	//     return nil, status.Errorf(codes.Internal, "failed to list objects: %v", err)
	// }

	// Mock objects
	objects := []*StorageObject{
		{
			Path:        "/uploads/customer_data.csv",
			Name:        "customer_data.csv",
			Size:        1024567,
			ContentType: "text/csv",
			ModifiedAt:  timestamppb.Now(),
		},
	}

	response := &ListStorageObjectsResponse{
		Objects: objects,
		Total:   int32(len(objects)),
		Limit:   req.Limit,
		Offset:  req.Offset,
	}

	return response, nil
}

// Helper functions

func generateJobID() string {
	return "job_" + generateID()
}

func generateRuleID() string {
	return "rule_" + generateID()
}

func generateLineageID() string {
	return "lineage_" + generateID()
}

func generateUploadID() string {
	return "upload_" + generateID()
}

func generateID() string {
	// In real implementation, would use UUID or similar
	return "12345"
}

// RegisterServer registers the gRPC server
func RegisterServer(grpcServer *grpc.Server, server *Server) {
	RegisterDataIntegrationServiceServer(grpcServer, server)
}